// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQDxj-vdlEuLxCCWbop9E1f2yfCkNmQ9aIOGcZZ2hpU26HrH"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQDS6XoBoycAkku3isK7erv0nJBlvt5x7gGkJe8BJOmUYaj2"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQD5U1q8qiGDZmg9RybppYABzEQmj6jMz_tuQnToHqUNb_n3"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQDxj-vdlEuLxCCWbop9E1f2yfCkNmQ9aIOGcZZ2hpU26HrH",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 18178n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDxj-vdlEuLxCCWbop9E1f2yfCkNmQ9aIOGcZZ2hpU26HrH",
            "to": "kQDS6XoBoycAkku3isK7erv0nJBlvt5x7gGkJe8BJOmUYaj2",
            "type": "internal",
            "value": 9965431000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDxj-vdlEuLxCCWbop9E1f2yfCkNmQ9aIOGcZZ2hpU26HrH",
          "to": "kQDS6XoBoycAkku3isK7erv0nJBlvt5x7gGkJe8BJOmUYaj2",
          "type": "internal",
          "value": 9965431000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17079n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDS6XoBoycAkku3isK7erv0nJBlvt5x7gGkJe8BJOmUYaj2",
            "to": "kQD5U1q8qiGDZmg9RybppYABzEQmj6jMz_tuQnToHqUNb_n3",
            "type": "internal",
            "value": 9937675000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDS6XoBoycAkku3isK7erv0nJBlvt5x7gGkJe8BJOmUYaj2",
          "to": "kQD5U1q8qiGDZmg9RybppYABzEQmj6jMz_tuQnToHqUNb_n3",
          "type": "internal",
          "value": 9937675000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 17089n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQD5U1q8qiGDZmg9RybppYABzEQmj6jMz_tuQnToHqUNb_n3",
            "to": "kQD5U1q8qiGDZmg9RybppYABzEQmj6jMz_tuQnToHqUNb_n3",
            "type": "internal",
            "value": 9909901000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQD5U1q8qiGDZmg9RybppYABzEQmj6jMz_tuQnToHqUNb_n3",
          "to": "kQD5U1q8qiGDZmg9RybppYABzEQmj6jMz_tuQnToHqUNb_n3",
          "type": "internal",
          "value": 9909901000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4951n,
      },
    ],
  },
]
`;
